# XiaoMeng

./: .dockerignore  .gitignore  Dockerfile  How_to_Build_QQBot_Tutorial.md  LICENSE  QUICKSTART.md  README.md  TUI_v2.py  __init__.py  api.py  chat.py  cli_chat.py  config.example.yaml  entrypoint.sh  examples.py  init.sh  install.bat  lingmeng_sprites.py  main.py  requirements.txt  run_gateway.py  run_gateway_v2.py  run_live2d.py  run_panel.py  run_qq.py  setup.py  start.bat  start_sovits.sh  test_all.py
cli/: __init__.py
config/: __init__.py  settings.py
core/: __init__.py  adapters.py  admin_panel.py  care.py  gateway.py  hardware.py  heartbeat.py  live2d_provider.py  llm_client.py  model_layer.py  model_manager.py  model_router.py  personalization.py  plugins.py  processor.py  realtime_info.py  router.py  schedule.py  scheduler.py  self_improving.py  session_manager.py  skill_loader.py  skills.py  skills_types.py  subagent.py  system_prompt.py  todo.py  tool_policy.py  tools.py  user_manager.py  version_control.py
data/: README.md  config.example.json  config.json.bak  identity_links.example.json  qq_config.example.json  routing_hints.md  users.json
desktop/: app.py
docs/: architecture.md  image-support.md  inner_world_design.md  optimization-2026-05-21.md
gateway/: __init__.py  base.py  cli.py  http.py  paper_reader.py  unified.py  websocket.py
gateway_rust/: Cargo.toml
gateway_rust/src/: cli.rs  gateway.rs  http.rs  lib.rs  main.rs  models.rs  websocket.rs
models/: __init__.py  core.py
tests/: test_comprehensive.py  test_new_features.py
(+147 files in other folders)
